doc: update docs

--- a/doc/开题报告.md
+++ b/doc/开题报告.md
@@ -33,19 +33,19 @@
 
 随着深度学习技术的不断发展，神经网络在计算机视觉和自然语言处理领域得到了广泛应用。受机器翻译领域中编解码器模型的启发，图像描述可以通过端到端的学习方法直接实现图像和描述句子之间的映射，将图像描述过程转化成为图像到描述的**翻译**过程。基于深度学习的图像描述生成方法大多采用以 CNN-RNN 为基本模型的编解码器框架，CNN 决定了整个模型的图像识别能力，其最后的隐藏层的输出被用作解码器的输入，RNN 是用来读取编码后的图像并生成文本描述的网络模型，下图是一个简单递归神经网络 RNN 和多模态递归神经网络 m-RNN 架构的示意图：
 
-![image](/img/01.png)
+![image](../doc/img/01.png)
 
 ### 3.2 基于注意力机制的方法
 
 近年来，注意力机制被广泛应用于计算机视觉领域，其本质是为了解决编解码器在处理固定长度向量时的局限性。注意力机制并不是将输入序列编码成一个固定向量，而是通过增加一个上下文向量来对每个时间步的输入进行解码，以增强图像区域和单词的相关性，从而获取更多的图像语义细节，下图是一个学习单词 / 图像对齐过程的示意图：
 
-![image](/img/02.png)
+![image](../doc/img/02.png)
 
 ### 3.3 基于生成对抗网络的方法
 
 生成对抗网络模型中至少有两个模块：生成网络和判别网络.。在训练过程中，生成网络生成尽量真实的数据以**欺骗**判别网络，并且通过判别网络的损失不断进行学习；而判别网络的任务就是区分生成的数据和真实数据。这两个网络通过动态的博弈学习，可以从无标签的数据中学习特征，从而生成新的数据使用生成对抗网络通过控制随机噪声向量来生成多样化的描述，下图展示了用于单句和段落的生成器 G 和用于单句的评估器 E 的结构：
 
-![image](/img/03.png)
+![image](../doc/img/03.png)
 
 ### 3.4 基于强化学习的方法
 
