--- a/doc/开题报告.md
+++ b/doc/开题报告.md
@@ -49,7 +49,8 @@
 
 ### 3.4 基于强化学习的方法
 
-强化学习（RL）在图像描述生成中的应用越来越广泛。例如，Rennie等人在他们的论文《Self-critical Sequence Training for Image Captioning》中提出了一种新的训练方法。他们使用了`REINFORCE`算法，通过自我批评的方式来优化模型，这种方法直接针对非可微的评估指标进行优化，如`CIDEr`得分。
+强化学习（RL）在图像描述生成中的应用越来越广泛。例如，Rennie等人在他们的论文《Self-critical Sequence Training for Image Captioning》中提出了一种新的训练方法。他们使用了`REINFORCE`算法，通过自我批评的方式来优化模型，这种方法直接针对非可微的评估指标进行优化，如`CIDEr`得分。其中`SCST`训练阶段的过程如下图所示：
+![Alt text](image.png)
 
 RL在图像描述中的应用：
 - 模型框架：使用代理（字幕生成器）在环境（图像和字幕数据集）中作出决策，并根据评估指标作为奖励信号。
@@ -117,7 +118,7 @@ RL在图像描述中的应用：
 
 在图像描述生成任务中，我们可以使用 Transformer 编码器来处理图像的网格或区域表示，得到一个全局的图像表示。然后，我们可以使用 Transformer 解码器来生成描述。在解码过程中，我们可以使用注意力机制来关注编码器的输出，这样可以使生成的描述更加准确。
 
-> 实验流程：
+> 大致流程：
 
 1. **特征提取**：首先，我们需要将输入的图片通过卷积神经网络进行特征提取，得到图片的网格或区域表示。这些表示能够捕捉到图片中的局部信息和全局信息。
 2. **编码**：然后，我们将使用 Transformer 编码器来处理图片的网格或区域表示，得到一个全局的图片表示。这个全局的图片表示能够捕捉到图片的整体信息。
@@ -151,9 +152,28 @@ METEOR（Metric for Evaluation of Translation with Explicit ORdering）用于评
 
 `CIDEr-D`是为图像描述任务设计的评估指标，专注于捕捉生成字幕与参考字幕之间的共识。Vedantam等人在他们的论文《CIDEr: Consensus-based Image Description Evaluation》中详细描述了这一指标。
 
-CIDEr-D评估：
-- `TF-IDF`加权：强调独特且信息丰富的`n-gram`的重要性。
-- `CIDEr-D`分数：基于生成字幕和参考字幕之间的`TF-IDF`加权余弦相似度计算得分。
+##### 公式推导
+
+`CIDEr-D`旨在**衡量生成的描述（候选描述）与一组参考描述之间的相似度**。核心思想是**识别生成描述和参考描述之间的共识部分**。计算公式主要包括以下几个步骤：
+
+1. `TF-IDF` 加权：对于每个描述中的词，计算其词频-逆文档频率（`TF-IDF`）权重。这个权重反映了词在描述集合中的重要性。
+
+   - 词频（TF）：词在单个描述中出现的频率。
+   - 逆文档频率（IDF）：反映了词在所有描述中的出现频率，较少出现的词将获得更高的IDF值。
+
+2. `n-gram `余弦相似度：将每个描述表示为`n-gram`的向量（通常n取1到4），并计算候选描述和每个参考描述之间的`TF-IDF`加权`n-gram`余弦相似度。
+
+   - 余弦相似度：两个`n-gram`向量的点积除以它们的范数。
+
+3. **CIDEr-D 分数计算**：对所有参考描述计算的余弦相似度求平均，得到最终的CIDEr-D分数。
+
+   - **公式**：对于候选描述`c`和一组参考描述`S`，CIDEr-D分数为：
+
+     \[ \text{CIDEr-D}(c, S) = \frac{1}{m} \sum_{i=1}^{m} \text{cos}(\text{TF-IDF}(c), \text{TF-IDF}(S_i)) \]
+
+     其中，`m`是参考描述的数量，`\(\text{TF-IDF}(c)\)`和`\(\text{TF-IDF}(S_i)\)`分别是候选描述和第`i`个参考描述的TF-IDF加权n-gram向量。
+
+这种方法通过重视那些在参考描述中共同出现但在整个数据集中不常见的词，来评估生成描述的质量。`CIDEr-D`的设计使其特别适用于图像描述任务，因为这些任务通常涉及生成与特定图像相关且信息丰富的描述。
 ### 4.3 其他内容
 
 #### 4.3.1 实现基于强化学习的损失函数，直接优化评测指标
@@ -165,8 +185,8 @@ CIDEr-D评估：
 
 #### 4.3.2 微调多模态预训练模型或多模态大语言模型，并测试性能
 
-多模态预训练模型的微调，如`CLIP`或`Visual BERT`，可以显著提升图像描述生成任务的性能。Radford等人在他们的论文《Learning Transferable Visual Models From Natural Language Supervision》中详细介绍了`CLIP`模型。
-
+多模态预训练模型的微调，如`CLIP`或`Visual BERT`，可以显著提升图像描述生成任务的性能。Radford等人在他们的论文《Learning Transferable Visual Models From Natural Language Supervision》中详细介绍了`CLIP`模型，其中zero-shot具体操作如下：
+![Alt text](image-1.png)
 
 ## 五、开发环境
 
