--- a/doc/开题报告.md
+++ b/doc/开题报告.md
@@ -50,7 +50,7 @@
 ### 3.4 基于强化学习的方法
 
 强化学习（RL）在图像描述生成中的应用越来越广泛。例如，Rennie等人在他们的论文《Self-critical Sequence Training for Image Captioning》中提出了一种新的训练方法。他们使用了`REINFORCE`算法，通过自我批评的方式来优化模型，这种方法直接针对非可微的评估指标进行优化，如`CIDEr`得分。其中`SCST`训练阶段的过程如下图所示：
-![Alt text](image.png)
+![image](../doc/img/image.png)
 
 RL在图像描述中的应用：
 - 模型框架：使用代理（字幕生成器）在环境（图像和字幕数据集）中作出决策，并根据评估指标作为奖励信号。
@@ -186,7 +186,8 @@ METEOR（Metric for Evaluation of Translation with Explicit ORdering）用于评
 #### 4.3.2 微调多模态预训练模型或多模态大语言模型，并测试性能
 
 多模态预训练模型的微调，如`CLIP`或`Visual BERT`，可以显著提升图像描述生成任务的性能。Radford等人在他们的论文《Learning Transferable Visual Models From Natural Language Supervision》中详细介绍了`CLIP`模型，其中zero-shot具体操作如下：
-![Alt text](image-1.png)
+![image](../doc/img/image-1.png)
+
 
 ## 五、开发环境
 
