doc: update docs

--- a/doc/开题报告.md
+++ b/doc/开题报告.md
@@ -133,12 +133,12 @@ METEOR（Metric for Evaluation of Translation with Explicit ORdering）用于评
 
 - $METEOR=P_{mean}(1-Penalty)$
 
-其中，`$P_{mean}$` 是调和平均精确度和召回率，`$Penalty$` 是对齐的复杂度，其公式如下：
+其中，$P_{mean}$ 是调和平均精确度和召回率，$Penalty$ 是对齐的复杂度，其公式如下：
 
 - $P_{mean}=\frac{precision×recall}{precision+recall}$
 - $Penalty=γ(\frac{chunks}{matches})^β$
 
-`$precision$` 是匹配的单词数占生成描述的单词数的比例，`$recall$` 是匹配的单词数占真实描述的单词数的比例，`$chunks$ `是连续匹配的块数，`$matches$` 是匹配的单词数，而 `$β$` 和 `$γ$` 是超参数。
+$precision$ 是匹配的单词数占生成描述的单词数的比例，$recall$ 是匹配的单词数占真实描述的单词数的比例，$chunks$ 是连续匹配的块数，$matches$ 是匹配的单词数，而 $β$ 和 $γ$ 是超参数。
 
 #### 4.2.2 ROUGE-L
 
@@ -146,7 +146,7 @@ METEOR（Metric for Evaluation of Translation with Explicit ORdering）用于评
 
 - $ROUGE-L=\frac{LCS(X,Y)}{max(|X|,|Y|)}$
 
-其中，`$X$` 和 `$Y$` 分别是生成描述和真实描述，`$∣X∣$`  和 `$∣Y∣$`  分别是生成描述和真实描述的长度，`$LCS(X, Y)$` 是生成描述和真实描述之间的最长公共子序列的长度。
+其中，$X$ 和 $Y$ 分别是生成描述和真实描述，$∣X∣$  和 $∣Y∣$  分别是生成描述和真实描述的长度，$LCS(X, Y)$ 是生成描述和真实描述之间的最长公共子序列的长度。
 
 #### 4.2.3 CIDEr-D
 
@@ -169,16 +169,16 @@ METEOR（Metric for Evaluation of Translation with Explicit ORdering）用于评
 
    - **公式**：对于候选描述`c`和一组参考描述`S`，CIDEr-D分数为：
 
-     \[ \text{CIDEr-D}(c, S) = \frac{1}{m} \sum_{i=1}^{m} \text{cos}(\text{TF-IDF}(c), \text{TF-IDF}(S_i)) \]
+     $\text{CIDEr-D}(c, S) = \frac{1}{m} \sum_{i=1}^{m} \text{cos}(\text{TF-IDF}(c), \text{TF-IDF}(S_i))$
 
-     其中，`m`是参考描述的数量，`\(\text{TF-IDF}(c)\)`和`\(\text{TF-IDF}(S_i)\)`分别是候选描述和第`i`个参考描述的TF-IDF加权n-gram向量。
+     其中，`m`是参考描述的数量，$\text{TF-IDF}(c)$ 和 $\text{TF-IDF}(S_i)$ 分别是候选描述和第`i`个参考描述的 TF-IDF 加权 n-gram 向量。
 
 这种方法通过重视那些在参考描述中共同出现但在整个数据集中不常见的词，来评估生成描述的质量。`CIDEr-D`的设计使其特别适用于图像描述任务，因为这些任务通常涉及生成与特定图像相关且信息丰富的描述。
 ### 4.3 其他内容
 
 #### 4.3.1 实现基于强化学习的损失函数，直接优化评测指标
 
-基于RL的损失函数可通过策略梯度方法实现，如REINFORCE算法。这种方法能够优化评估指标，如`CIDEr`得分。
+基于RL的损失函数可通过策略梯度方法实现，如 REINFORCE 算法。这种方法能够优化评估指标，如`CIDEr`得分。
 
 基于RL的损失函数：
 - 策略梯度方法：通过最大化预期奖励（如`CIDEr`得分）来调整模型参数。
