fix: readme conflict

--- a/gridattn_image_caption.ipynb
+++ b/gridattn_image_caption.ipynb
@@ -10,9 +10,7 @@
    "source": [
     "# 实战案例：基于注意力的图像描述模型（ARCTIC）\n",
     "\n",
-    "## 模型训练流程\n",
-    "\n",
-    "![模型训练的一般流程](img/cr-traning_process.png)\n"
+    "## 模型训练流程\n"
    ]
   },
   {
@@ -353,9 +351,7 @@
    "source": [
     "## 定义模型\n",
     "\n",
-    "ARCTIC模型是一个典型的基于注意力的编解码模型，其编码器为图像网格表示提取器，解码器为循环神经网络。解码器在每生成一个词时，都利用注意力机制考虑当前生成的词和图像中的哪些网格更相关。\n",
-    "\n",
-    "![ARCTIC的模型结构示意图](img/mt-cnn-attn.png)\n"
+    "ARCTIC模型是一个典型的基于注意力的编解码模型，其编码器为图像网格表示提取器，解码器为循环神经网络。解码器在每生成一个词时，都利用注意力机制考虑当前生成的词和图像中的哪些网格更相关。\n"
    ]
   },
   {
@@ -477,8 +473,6 @@
     "解码器前馈过程的实现流程如下：\n",
     "\n",
     "（1）将图文数据按照文本的实际长度从长到短排序，这是为了模拟pack_padded_sequence函数的思想，方便后面使用动态的批大小，以避免<pad>参与运算带来的非必要的计算消耗。\n",
-    "\n",
-    "![pack_padded_sequence函数的作用的示例图](img/cr-pack_padded_sequence-example.png)\n",
     "    \n",
     "\n",
     "（2）在第一时刻解码前，使用图像表示来初始化GRU的隐状态。\n",
