doc: update img

--- a/doc/NNDL课设_结题报告(JupyterVersion).ipynb.ipynb
+++ b/doc/NNDL课设_结题报告(JupyterVersion).ipynb.ipynb
@@ -1332,7 +1332,7 @@
     "\n",
     "> 待补充\n",
     "\n",
-    "#### 5.1.2 Transformer Encoder and Decoder 输出展示（这个数值要调）\n",
+    "#### 5.1.2 Transformer Encoder and Decoder 输出展示\n",
     "\n",
     "![image](../doc/img/Transformer_demo1.png)\n",
     "\n",
