--- a/doc/NNDL课设_结题报告(JupyterVersion).ipynb.ipynb
+++ b/doc/NNDL课设_结题报告(JupyterVersion).ipynb.ipynb
@@ -1338,6 +1338,10 @@
     "\n",
     "![image](../doc/img/Transformer_demo2.png)\n",
     "\n",
+    "![image](../doc/img/Transformer_demo3.png)\n",
+    "\n",
+    "![image](../doc/img/Transformer_demo4.png)\n",
+    "\n",
     "#### 5.1.3 BLIP 多模态输出展示\n",
     "\n",
     "![image](../doc/img/BLIP_1.png)\n",
@@ -1345,6 +1349,8 @@
     "![image](../doc/img/BLIP_2.png)\n",
     "\n",
     "![image](../doc/img/BLIP_3.png)\n",
+    "\n",
+    "![image](../doc/img/BLIP_full.png)\n",
     "\n",
     "### 5.2 评测指标统计\n",
     "\n",
